added more code

--- a/app/views/inspections/index.html.erb
+++ b/app/views/inspections/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Inspections#index</h1>
 <p>Find me in app/views/inspections/index.html.erb</p>
+
+<div ng-app="app">
+  {{ 1 + 1 }}
+  <div ng-controller="stuffCtrl">
+    <p>{{ message }} </p>
+    <p>{{ moreStuff }} </p>
+
+    <p>{{ message }} blabla {{ moreStuff }}</p>
+  </div>
+</div>
